--- a/device/src/main/AndroidManifest.xml
+++ b/device/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cn.wefeel.device.MyApplication"
+        android:name="cn.wefeel.device.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
