--- a/device/src/main/AndroidManifest.xml
+++ b/device/src/main/AndroidManifest.xml
@@ -21,17 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="cn.wefeel.device.MainActivity"/>
+        <activity android:name="cn.wefeel.device.MainActivity" />
         <activity
             android:name="cn.wefeel.device.UpdateActivity"
             android:screenOrientation="portrait" />
 
         <service android:name="cn.wefeel.device.UpdateService" />
-
         <activity android:name="cn.wefeel.device.ScanActivity" />
         <activity android:name="cn.wefeel.device.DetailActivity" />
-        <activity
-            android:name="cn.wefeel.device.SearchActivity" />
+        <activity android:name="cn.wefeel.device.SearchActivity" />
         <activity android:name="cn.wefeel.device.LogActivity" />
         <activity android:name="cn.wefeel.device.ExplorerActivity" />
     </application>
